RESOLVED FIXED117053
JSCallbackObject does not correctly initialise the PropertySlot for getOwnPropertyDescriptor
https://bugs.webkit.org/show_bug.cgi?id=117053
Summary JSCallbackObject does not correctly initialise the PropertySlot for getOwnPro...
Oliver Hunt
Reported 2013-05-30 15:36:41 PDT
JSCallbackObject does not correctly initialise the PropertySlot for getOwnPropertyDescriptor
Attachments
Patch (2.61 KB, patch)
2013-05-30 15:37 PDT, Oliver Hunt
mhahnenberg: review+
Oliver Hunt
Comment 1 2013-05-30 15:37:17 PDT
Mark Hahnenberg
Comment 2 2013-05-30 15:40:29 PDT
Comment on attachment 203387 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=203387&action=review r=me with spelling nit. Thanks! > Source/JavaScriptCore/API/tests/testapi.mm:820 > + checkResult(@"Make sure we through an exception when calling getter on incorrect |this|", context.exception); s/through/throw/
Oliver Hunt
Comment 3 2013-05-30 15:57:58 PDT
Note You need to log in before you can comment on or make changes to this bug.