JSCallbackObject does not correctly initialise the PropertySlot for getOwnPropertyDescriptor https://bugs.webkit.org/show_bug.cgi?id=117053

Reviewed by Mark Hahnenberg.

Set appropriate thisValue on the PropertySlot

* API/JSCallbackObjectFunctions.h:
(JSC::::getOwnPropertyDescriptor):
* API/tests/testapi.mm:

Canonical link: https://commits.webkit.org/135312@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@150990 268f45cc-cd09-0410-ab3c-d52691b4dbfc